--- a/RobotValidation.Tests/RobotValidation.Tests.csproj
+++ b/RobotValidation.Tests/RobotValidation.Tests.csproj
@@ -81,8 +81,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\FormControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
